--- a/CSS/contactos.css
+++ b/CSS/contactos.css
@@ -1,51 +1,247 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;/*Esto sirve para quitar la separacion que tiene la pagina en los bordes de la ventana*/
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 body{
     font-family: "Lora", serif;
     font-family: "Montserrat", sans-serif;
 }
 .contenedor{
-    padding: 60px 0;/*Aqui le damos una propiedad de 60px de arriba hacia abajo y o de los lados*/
+    padding: 60px 0;
     width: 90%;
     max-width: 1000px;
-    margin: auto;/*Esto permite que lo centre todo*/
+    margin: auto;
     overflow: hidden;
 }
+/*TITULOS, SON LOS PRINCIPALES DEBAJO DE LA FOTOGRAFIA*/
 .titulo{
-    color: #0d58ae;
-    font-size: 30px;
+    color: #071252;
+    font-size: 35px;
     text-align: center;
     margin-bottom: 60px;
+}
+.titulo:hover{
+    color: #987f05;
+}
+a{
+    text-decoration: none;
+}
+.padre{
+    display: flex;
+    flex-flow: column nowrap;
+}
+.margen-interno{
+    padding: 0 50px;
     
 }
 /*El HEADER*/
-/*PARA EL GRADIENTE: se utilizo el uiGradients*/
 header{
+    /*PARA EL GRADIENTE: se utilizo el uiGradients*/
+      /*Esto de ../ nos ayuda a retroceder sobre un directorio*/
+       width: 100%;
+       height: 600px; /*Pocisionamos la imgen el el tamaño*/
+       background: #2980B9;  /* fallback for old browsers */
+       background: -webkit-linear-gradient(to right, hsla(0, 0%, 100%, 0.641), hsla(196, 93%, 70%, 0.619), hsla(204, 64%, 44%, 0.696)), url(../img/s4.jpg);  /* Chrome 10-25, Safari 5.1-6 */
+       background: linear-gradient(to right, hsla(0, 0%, 100%, 0.641), hsla(196, 93%, 70%, 0.619), hsla(204, 64%, 44%, 0.696)), url(../img/s4.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   
+       background-attachment: fixed;
+       background-size: cover;
+       position: relative;
+       }
+ /*AQUI ESTA UBICADO TODO LO QUE SE REFIERE A LA CLASE CONTENIDO*/
+.contenedor{
+    padding: 60px 0; /*Para que entre secciones haya un espacio de colocamos el padding*/
+    width: 90%;
+    max-width: 1000px; 
+    margin: auto; /*esto hace que me lo centre todo*/
+    overflow: hidden;
+}
+
+   header .textos-header{
+        display: flex;
+        font-size: 40px;
+        font-family: "Lora", serif;
+         height: 400px;/*CAMBIA LA ALTURA DEL TEXTO*/
+         width: 100%;
+         align-items: center;
+         justify-content:center ;/*Es para justificar el texto*/
+         flex-direction: column; /*Aqui es cuando tenemos el texto en una misma linea y asi lo baja..! a la siguiente*/
+         text-align: center;
+        }
+
+        .textos-header h1{
+            font: 50px;
+            color: aliceblue;
+            text-shadow: 2px 2px 4px #000000;
+        
+        }
+        .textos-header h1:hover{
+            color: #071252;
+            text-shadow: 2px 2px 4px #f8f5f5;
+        }
+        .textos-header h2{
+            font: 30px;
+            font-weight: 300;
+            color: #fff;
+            text-shadow: 2px 2px 4px #000000;
+        }
+        .textos-header h2:hover{
+            color: #071252;
+            text-shadow: 2px 2px 4px #f8f5f5;
+        }
+
+    /*AQUI SE DESGLOSA LA PARTE DEL MENU PRINCIPAL DE LA PAGINA*/
+        .menu{
+            background: rgba(255, 255, 255, 0.5);/* PONERLE COLOR NEGRO CON DEGRADE*/
+            display: flex;
+            flex-flow: row nowrap;
+            height: 100px;
+            align-items: center;
+
+        }
+            .logo{  
+                display: flex;
+                flex:5 1 auto; 
+                      
+            }
+                .logo a{
+                    color: rgb(39, 41, 43);
+                    font-size: 30px; 
+                    margin-left: 110px;                           
+                }
+                .logo a:hover{
+                    color: #8e780e;
+                }
+                .logo img{
+                    width: 110px; /*Cambio el tamaño de la imagen*/                         
+                    float: left;
+                    flex-flow: row nowrap;     
+                    position: absolute;
+                }
+            .nav{
+                flex:5 1 auto; 
+                font-family: "Lora", serif;
+                
+               
+                          
+            }
+                .nav a{
+                    color: a#7d1010;
+                    font-size: 13px;
+                   
+                    text-transform: uppercase;
+                    padding: 0 10px;
+                    letter-spacing: 2px;
+                }
+                .nav a:hover{
+                    color: #840d0d;
+                }
+            .social{
+                flex:1 1 auto; 
+                display: flex; 
+            }
+                .social a{
+                    font-size: 18px;
+                    color: rgb(5, 49, 87);
+                    padding: 0 5px;
+                }
+                .facebook:hover{
+                    color: #00bbff;
+                }
+                .insta:hover{
+                    color: #f81808;
+                }
+
+
+
+/*ESTO SIRVE PARA TENER EL EFECTO WAVE: OSEA PONER LA OLA*/
+.wave{
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    height: 600px;
-    background: #373B44;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(217, 89%, 61%, 0.495), hsla(222, 11%, 24%, 0.505)), url(../img/S4.jpg);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(217, 89%, 61%, 0.495), hsla(222, 11%, 24%, 0.505)), url(../img/S4.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: cover;
-    background-attachment: fixed;
+}      
+/*MODIFICO LA IMAGEN Y EL TEXTO, de la segunda seccion "Nuestros Creditos*/
+.contenedor-sobre-nosotros{
+    display: flex;
+    justify-content: space-evenly;
+}
+.imagen1{
+width: 300px;   
+}
+.contenidos-textos{
+    margin: auto;
+    padding: 70px;
+}
+.contenidos-textos h3{
+    margin-bottom: 15px;
+}
+.contenidos-textos h3:hover{
+    color: #cc1717;
+}
+.contenidos-textos h3 span{
+   background: rgba(5, 40, 216, 0.3);
+   color: #05204e;
+   border-radius: 75%;
+   display: inline-block;
+   text-align: center;
+   width: 30px;
+   height: 30px;
+   padding: 2px;
+   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);/*Le da sombra a el circulo o caja que contiene los numeros*/
+   margin-right: 6px; /*Esto separa el espacio entre los numeros y las letras de la seccion*/
+}
+.contenidos-textos p{
+    padding: 0px 0px 30px 15px;
+    font-weight: 300;
+    text-align: justify;
+}
+/*GALERIA*/
+.portafolio{
+    background: #f2f2f2;
+}
+.galeria-port{
+    display: flex;
+    justify-content: space-evenly;  
+    flex-wrap: wrap; 
+}
+.imagen-port{
+    width: 24%;
+    margin-bottom: 10px;
+    height: 150px;
+    overflow: hidden;
     position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
-nav{
-    text-align: right;
-    padding: 30px 50px 0 0;
+.imagen-port > img{
+    width: 100%;
+    height: 100%;
+   object-fit: cover;
+   display: block;
 }
-.nabar > a{
-    color: #fff;
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 300;/*Permite aunmentar o disminuir segun el valor de numeros que le demos el grozor de la fuente*/
-    text-decoration: none;/*Esto le quita el subrayado que tiene el texto*/
-    margin-right: 10px; /*Es la separacion de uno del otro*/
-    letter-spacing: 2px;
+.hover-galeria{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+   /*transform: scale(0);*/
+   background: hsla(204, 64%, 44%, 0.7);
+   transition: transform .5s;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+    
 }
-.nabar > a:hover{
-    color: #840d0d;
+.hover-galeria img{
+    width: 50px;
+}
+
+.hover-galeria p{
+    color: #f2f2f2;
+    text-align: center;
+}
+.imagen-port:hover .hover-galeria{
+    transform: scale(0);
 }
