--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap);
 *{
     margin: 0px;
     padding: 0px;
@@ -29,65 +30,93 @@ a{
     flex-flow: column nowrap;
     }
         .menu{
-            background: rgba(255, 255, 255, 0.5);/* PONERLE COLOR NEGRO CON DEGRADE*/
+            background: linear-gradient(to bottom, rgba(151, 170, 253, 0.699), rgb(1, 27, 34));
             display: flex;
             flex-flow: row nowrap;
-            height: 100px;
+            height: 60px;
             align-items: center;
 
         }
             .logo{  
                 display: flex;
-                flex:5 1 auto; 
+                flex:3 1 auto; 
                       
             }
-                .logo a{
-                    color: rgb(39, 41, 43);
-                    font-size: 30px; 
-                    margin-left: 110px;                           
-                }
-                .logo a:hover{
-                    color: #8e780e;
-                }
-                .logo img{
-                    width: 110px; /*Cambio el tamaño de la imagen*/                         
-                    float: left;
-                    flex-flow: row nowrap;     
-                    position: absolute;
-                }
+            .logo{
+                float: left;
+                padding: 5px 5px 0;
+            }
+            .logo img{
+                height: 80px;
+            }
+            .logo img:hover{
+                transform: scale(1.1);
+            }
             .nav{
           
                 flex:5 1 auto;              
             }
-                .nav a{
-                    color: a#7d1010;
-                    font-size: 12px;
-                    text-transform: uppercase;
-                    padding: 0 10px;
-                    letter-spacing: 2px;
-                }
-                .nav a:hover{
-                    color: #840d0d;
-                }
-            .social{
-                flex:1 1 auto; 
-                display: flex; 
+            .nav{
+                float: right;
+                display: flex;
+                align-items: center;
+                min-height: 90px;
+                z-index: 1000;
             }
-                .social a{
-                    font-size: 18px;
-                    color: rgb(5, 49, 87);
-                    padding: 0 5px;
-                }
-                .facebook:hover{
-                    color: #00bbff;
-                }
-                .insta:hover{
-                    color: #f81808;
-                }
-                
+            .nav ul{
+                list-style: none;
+                padding: 0 10px;
+            }
+            .nav ul li{
+                display: inline-block;
+                position: relative;
+                transition: .3s linear;
+                z-index: 1000;
+            }
+            .nav ul li:hover{
+                transform: scale(1.1);
+            }
+            .nav ul li a{
+                color: #ffffff;
+                text-shadow: 2px 2px 4px #000000;
+                text-align: center;
+                text-transform: uppercase;
+                font-size: 13px;
+                font-weight: bold;
+                padding: 12px 20px;
+                transition: .3s linear;
+            }
+            
+            .nav ul li a:hover{
+                color: #f7d309;
+                transform: scale(1.1);
+            }
+            
+            .nav ul li:hover .hijos{
+                display: block;
+                background-color: hsla(224, 73%, 20%, 0.89);
+            }
+            .nav .submenu .hijos{
+                display: none;
+                background: linear-gradient(to bottom, hsla(187, 100%, 7%, 0.192), hsla(193, 98%, 50%, 0.473));
+                position: absolute;
+                width: 140%;
+                margin-top: 5px;
+               
+            }
+            .nav .submenu .hijos li{
+                display: block;
+                overflow: hidden;
+                border-bottom: none;
+            }
+            .nav .submenu .hijos li a{
+                display: block;
+                text-align: left; 
+            }
+            
 
         .texto-principal{
-            background: rgba(0,0,0,.5);
+            background: rgba(0,0,0,.6);
             height: 500px;
             padding: 160px;
             text-align: center;
@@ -97,18 +126,28 @@ a{
                 font-style: italic;
                 font-size: 50px;
                 color: #fff;
-                font-weight: 300;
+                text-shadow: 2px 2px 4px #000000;
+                font-weight: 800;
                 text-align: center;
                 line-height: 1.6;
+            }
+            h1:hover{
+                color: #00b7ff;
+                text-shadow: 2px 2px 4px #0a0a0a;
             }
             .creciendo{
                 font-family: "Lora", serif;
                 font-size: 35px;
                 font-style: italic;
                 color: #faf5f5;
-                font-weight: 300;
+                text-shadow: 2px 2px 4px #000000;
+                font-weight: 500;
                 text-align: center;
                 line-height: 1.6;
+            }
+            .creciendo:hover{
+                color: #00b7ff;
+                text-shadow: 2px 2px 4px #0a0a0a;
             }
     .section{
     background: #f7f7f7;
@@ -207,24 +246,119 @@ a{
                 color: #fbff0b;
             }
            
+            .redes-sociales{
+                display: flex;
+                align-items: center;
+                justify-content: center; /* Alinear los iconos de redes sociales hacia la derecha */
+                margin-right: 10px;
+                }
+                .redes-sociales{
+                position: relative; /* Establece la posición relativa */
+                margin: 0 40px; /* Espacio entre los iconos de las redes sociales */
+                font-size: 24px;
+                color: #dedede;
+                transition: color 0.3s, transform 0.3s; /* Transiciones suaves para el color y la escala */
+                }
+                .facebook{
+                    margin: 0px 15px;
+                    color: #0a74ee;
+                }
+                .instagram{
+                    margin: 0px 5px;
+                    color: #db1e05;
+                }
+                .whatsapp{
+                    margin: 0px 15px;
+                    color: #01b534;
+                }
+            
+                /* Efecto de escala al pasar el mouse */
+                .redes-sociales a:hover {
+                transform: scale(1.3); /* Escala el icono al 130% del tamaño original */
+                }
+            
+                /* Cambio de color al pasar el mouse */
+                .redes-sociales .facebook:hover {
+                color: #1684fa; /* Cambia el color al pasar el mouse */
+                }
+            
+                .redes-sociales .instagram:hover {
+                color: #f10505; /* Cambia el color al pasar el mouse */
+                }
+            
+                .redes-sociales .whatsapp:hover {
+                color: #55e203; /* Cambia el color al pasar el mouse */
+                }
+            
+                /* Animación para el fondo cuadradito */
+                .redes-sociales a::after {
+                content: "";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 0;
+                height: 0;
+                background-color: transparent;
+                border: 1px solid transparent;
+                border-radius: 10px; /* Ajusta el radio de las esquinas para hacerlas curveadas */
+                transition: width 0.3s, height 0.3s, background-color 0.3s;
+                transform: translate(-50%, -50%);
+                }
+            
+                /* Efecto de crecimiento y cambio de color al pasar el mouse */
+                .redes-sociales a:hover::after {
+                width: 30px;
+                height: 30px;
+                background-color: rgba(5, 92, 133, 0.418); /* Cambia el color de fondo */
+                border-color: hsla(0, 0%, 0%, 0.192); /* Cambia el color del borde */
+                }
+/*MODIFICACION DEL FOOTER*/
+.wave2{
+    position: absolute;
+    bottom: -980px;
+    left: -0px;
+    width: 100%;
+   
+} 
+.footer{
+    padding: 100px 40px;
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(to bottom, rgba(7, 154, 212, 0.534), rgb(0, 2, 20));
+    
+}
+/*ESTO SIRVE PARA TENER EL EFECTO WAVE: OSEA PONER LA OLA*/
+.wave{
+    position: absolute;
+    bottom: 70px;
+    left: -0px;
+    width: 100%;
+} 
 
-    .footer{
-        background: rgba(0,0,0,.5);
-       display: flex;
-        justify-content: center;
-    }
-        .pie{
-            background: #111112;
-            width: 300px;
-        }
-        .pie a{
-            color: #fff;           
-            font-family: "Lora", serif;  
-            font-size: 11px;     
-            text-transform: uppercase; 
-            padding: 0 10px;
-            letter-spacing: 2px;
-        }
+.links h4{
+    color: rgb(210, 210, 220);
+    text-transform: uppercase;
+    margin-bottom: 20px; 
+}
+.links ul li a{
+    color: #ffffff;
+    font-size: 16px;
+    margin-bottom: 5px;
+    display: inline-block;
+    
+}
+.footer img{
+    display: flex;
+    width: 300px;
+    height: 200px;
+    transition: transform 0.3s ease; /* Transición suave al pasar el mouse */
+    margin-left: -10px;
+}
+
+.footer img:hover{
+    transform: scale(1.2); /* Escala la imagen al 110% del tamaño original */
+    cursor: pointer; /* Cambia el cursor a una mano */
+}
 @media all and (max-width: 800px){
     .section{
         flex-direction: column;
