--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -324,13 +324,8 @@ a{
     width: 100%;
    
 } 
-.footer{
-    padding: 50px 60px;
-    display: flex;
-    justify-content: space-between;
-    background: linear-gradient(to bottom, rgba(0, 104, 179, 0.686), rgb(63, 147, 251));
-    
-}
+
+
 /*ESTO SIRVE PARA TENER EL EFECTO WAVE: OSEA PONER LA OLA*/
 .wave{
     position: absolute;
@@ -338,101 +333,181 @@ a{
     left: -0px;
     width: 100%;
 } 
-/* Estilos comunes para todos los elementos */
-.links h4, .links2 h4, .links ul, .links2 ul, .links ul li p, .links2 ul li a {
-    margin:5px; /* Elimina el margen predeterminado */
-    padding: 10px; /* Elimina el relleno predeterminado */
+
+/*AQUI SE COMIENZA A HACER EL FOOTER*/
+footer{
+    background: linear-gradient(to right, #002454, #0077FF);
+    position: relative;
+    width: 100%;
+    min-height: 400px;
+    padding: 3rem 1rem;
+}
+.container {
+   max-width: 1200px;
+   margin: 40px auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+
+}
+.row{
+   margin-top: 50px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.links h4, .links2 h4 {
-    background: none;
-    margin-top: 100px;
+.col{
+   min-width: 250px;
+   color:#f2f2f2f2;
+   font-family: poppins;
+   padding:0 2rem;
 }
-
-/* Estilos para h4 */
-.links h4, .links2 h4 {
+.col .logo{
+   width: 200px;
+   margin-bottom:25px; 
+   position: absolute; /* Cambiar a posicionamiento absoluto */
+   top: 20px; /* Colocar en la esquina superior */
+   left: 55px;
+   cursor: pointer;
+}
+.logo img {
+    width: 200px;
+    margin-bottom: 25px;
+    transition: transform 0.3s ease; /* Agregar una transición para una animación suave */
+  }
+.logo img:hover{
+    transform: scale(1.1);
+}
+.col p{
     color: #ffffff;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    text-shadow: 2px 2px 4px #000000;
-    margin-left: 30px; /* Alinea el texto a la izquierda */
-    margin-right: auto; /* Alinea el texto a la derecha */
+    text-align: justify;
+    margin-top: -100px; /* Ajustar el margen superior para dejar espacio debajo del logo */
+}
+.col h3{
+   color:rgb(255, 255, 255);
+   margin-bottom: 20px;
+   font-size: 16px;
+   position: relative;
+   cursor: pointer;
+}
+.col h3::after{
+   content: '';
+   height:3px;
+   width:0px;
+   background-color: rgb(1, 183, 255);
+   position: absolute;
+   bottom: 0;
+   left:0;
+   transition: 0.3s ease;
+
+}
+.col h3:hover::after{
+   width:60px
+}
+.col .contac {
+    color:#ffffff;
+   margin-bottom: 100px;
+   font-size: 16px;
+   position: relative;
+   cursor: pointer;
 }
 
-/* Estilos para los elementos de la lista */
-.links ul, .links2 ul {
-    list-style-type: none; /* Elimina el marcador de lista */
-    padding: 0; /* Elimina el espacio interior predeterminado */
+.col .social a i{
+   color:rgb(255, 255, 255);
+   margin-top:2rem;
+   font-size: 25px;
+   margin-right: 15px;
+   transition: 0.3s ease;
+}
+.col .social a i:hover{
+   transform: scale(1.9);
+   filter:grayscale(25);
+}
+.col .links a{
+   display: block;
+   text-decoration: none;
+   color:#ffffff;
+   margin-bottom: 5px;
+   position: relative;
+   transition: 0.3s ease;
+}
+.col .links a::before{
+   content:'';
+   height: 16px;
+   width:3px;
+   position: absolute;
+   top:5px;
+   left:-10px;
+   background-color: rgb(1, 213, 255);
+   transition: 0.5s ease;
+   opacity: 0;
+}
+.col .links a:hover::before{
+   opacity: 1;
+}
+.col .links a:hover{
+   transform: translateX(-8px);
+   color:rgb(243, 255, 12);
+}
+.col .contact-details{
+   display: inline-flex;
+   justify-content: space-between;
+   color:#ffffff;
+   margin-bottom: -10px;
+   font-size: 16px;
+ 
 }
 
-/* Estilos para los elementos de la lista dentro de .links y .links2 */
-.links ul li, .links2 ul li {
-    display: flex;
-    align-items: center; /* Alinea verticalmente el contenido */
+.row .form{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding:2rem 0;
+}
+.row .form input{
+   background-color: #1a1c20ff;
+   border:0;
+   outline:none;
+   padding:14px 20px;
+   border-radius: 6px;
+   border-top-right-radius: 0;
+   border-bottom-right-radius: 0;
+}
+.form button{
+   padding:14px 20px;
+   border:0;
+   border-radius: 6px;
+   border-top-left-radius: 0;
+   border-bottom-left-radius: 0;
+   background-color: rgb(7, 197, 249);
 }
 
-/* Estilos para párrafos dentro de .links ul li */
-.links ul li p {
-    font-size: 17px;
-    font-family: "Lora", serif;
-    color: rgb(255, 255, 255);
-    text-shadow: 2px 2px 4px #000e16;
-    margin: 10px 0; /* Elimina el margen izquierdo y derecho */
-    width: 80%; /* Ocupa todo el ancho disponible */
-    letter-spacing: 1px; /* Ajusta el espaciado entre letras */
-    font-weight: 400;
+/********** Responsive Design ********/
+@media(max-width:900px)
+{
+ .row{
+   flex-direction: column;
+ }
+ .col{
+   width: 100%;
+   text-align: left;
+   margin-bottom: 25px;
+ }
 }
-.links ul li p:hover {
-    color: #ffe343;
-}
-
-/* Estilos para enlaces dentro de .links2 ul li */
-.links2 ul li a {
-    font-size: 20px;
-    
-    color: rgb(255, 255, 255);
-    text-shadow: 2px 2px 4px #000e16;
-    width: 100%; /* Ocupa todo el ancho disponible */
-    margin-top: 10px; /* Agregar margen superior */
-    margin-left: 0; /* Elimina el margen izquierdo */
-    line-height: 1.5; /* Ajusta el espacio entre líneas */
-    font-weight: 400;
+@media(max-width:768px)
+{
+ .row{
+   flex-direction: column;
+ }
+ .col{
+   width: 100%;
+   text-align: left;
+   margin-bottom: 20px;
+ }
 }
 
-/* Cambiar el color al hacer hover */
-.links2 ul li a:hover {
-    color: #ffe343;
-}
-
-.links .redes-sociales h4 {
-    margin-left: 100px;
-}
-.fa-arrow-right {
-    margin-left: 5px; /* Ajusta el margen izquierdo entre el icono y el texto */
-    color: rgb(0, 9, 128); /* Cambia el color del icono */
-    font-size: 24px; /* Cambia el tamaño del icono */
-    margin-right: -20px;
-    margin-top: -15px;
-    transition: transform 0.3s ease; /* Agrega una transición de movimiento */
-  }
-  
-  .fa-arrow-right:hover {
-    transform: translateX(5px); /* Mueve el icono hacia la derecha al hacer hover */
-    text-shadow: 2px 2px 4px #b7e4ff;
-  }
-
-.footer img{
-    display: flex;
-    width: 300px;
-    height: 200px;
-    transition: transform 0.3s ease; /* Transición suave al pasar el mouse */
-    margin-left: -10px;
-}
-
-.footer img:hover{
-    transform: scale(1.2); /* Escala la imagen al 110% del tamaño original */
-    cursor: pointer; /* Cambia el cursor a una mano */
-}
 
 
 @media all and (max-width: 800px){
